k8s/spring/spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring
  name: spring
spec:
  ports:
    - port: 7070
      protocol: TCP
      targetPort: 7070
      name: spring
  selector:
    app: spring-deployment
  type: ClusterIP
