k8s/spring/spring-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "bd-spring.ddns.net"
      http:
        paths:
          - path: /app
            pathType: ImplementationSpecific
            backend:
              service:
                name: spring
                port:
                  name: spring
  tls:
    - hosts:
        - bd-spring.ddns.net
